--- a/package.json
+++ b/package.json
@@ -43,7 +43,13 @@
     "prettier": "2.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2"
+    "typescript": "^4.2",
+    "styled-components": "^5.3.1",
+    "@types/styled-components": "^5.1.15",
+    "polished": "^4.1.3",
+    "react-feather": "^2.0.9",
+    "@types/rebass": "^4.0.5",
+    "rebass": "^4.0.7"
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
